Fixed image centering on mobile

--- a/main.css
+++ b/main.css
@@ -6,17 +6,19 @@ button{
     text-align: center;
     padding: 20px 45px;
     display: inline-block;
-    font-size: 20px;
-    border-radius: 20px;
+    font-size: 1em;
+    border-radius: 1em;
 }
 img{
     max-height: 80%;
+    max-width: 80%;
 }
 .center{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 50% !important;
+    text-align: center;
 }
 .flex{
     display: flex;
